--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "csv-to-js-parser": "^2.3.4",
+    "date-fns": "^2.28.0",
     "log4js": "^6.4.5",
     "readline-sync": "^1.4.10"
   }
