--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "csv-to-js-parser": "^2.3.4",
     "date-fns": "^2.28.0",
     "log4js": "^6.4.5",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "xml2js": "^0.4.23"
   }
 }
