--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "csv-to-js-parser": "^2.3.4",
     "date-fns": "^2.28.0",
     "log4js": "^6.4.5",
+    "moment": "^2.29.3",
     "readline-sync": "^1.4.10",
+    "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
   }
 }
